fix: align contact info

--- a/assets/scss/contact.scss
+++ b/assets/scss/contact.scss
@@ -57,6 +57,7 @@
 
     .contact__block {
       text-align: center;
+      padding-left: unset;
     }
   }
   
@@ -80,7 +81,7 @@
     .contact__block {
       // flex: 0 0 50%;
       text-align: center;
-
+      padding-left: unset;
     }
   }
 }
